<resources>
    <string name="app_name">RecipeMate</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="bookmark">BookMark</string>
    <string name="user">User</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="phone">Phone number</string>
    <string name="user_name">User Name</string>
    <string name="about">About</string>
    <string name="gender">Gender</string>
    <string name="password">Password</string>
    <string name="display_pass">• • • • • • • •</string>
    <string name="sign_out">Sign out</string>
    <string name="system">System</string>
    <string name="find">Find</string>
    <string name="best_recipes"> best recipes</string>
    <string name="for_cooking">for cooking</string>
    <string name="popular_category">Popular category</string>
    <string name="recent_recipes">Recent recipes</string>
    <string name="text_welcome_back">Welcome Back!</string>
    <string name="please_enter_your_account_here">Please enter your account here</string>
    <string name="email">Email </string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome!</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="watch_video">Watch Video</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="full_user_name">%1$s %2$s</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_current_password">Current password is incorrect. Please try again.</string>
    <string name="error_empty_new_password">New password cannot be empty.</string>
    <string name="error_short_password">New password must be at least 8 characters long.</string>
    <string name="error_same_as_current_password">New password cannot be the same as the current password.</string>
    <string name="error_password_mismatch">New password and confirm password do not match.</string>
    <string name="sign_out_confirmation_message">Are you sure you want to sign out?</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="password_updated_success">Password has been updated!</string>
    <string name="bookmarked_recipes">Bookmarked Recipes</string>
    <string name="confirm_title">Confirm</string>
    <string name="confirm_message">Do you want to remove this recipe from saved recipes?</string>

    <string name="favourite_button">Favourite Button</string>
    <string name="sad_no_result">Sad no result !!</string>
    <string name="no_data_available_description">We cannot find the item you are searching for. maybe be little spelling mistake or try different keyword ?</string>
    <string name="todo">TODO</string>
</resources>